# tiled_map_web_viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Trunk.toml  deny.toml  index.html  justfile  readme.md  readme_zh-hans.md  tokei_check.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml  update-deps.yml
.workbench/: settings.toml
assets/: NOTICE
assets/maps/: 001-1.tmx  001-3.tmx  002-1.tmx  002-2.tmx  002-3.tmx  002-4.tmx  002-5.tmx  003-4.tmx  004-1.tmx  004-3.tmx  004-4.tmx  004-5.tmx  005-3.tmx  006-1.tmx  006-2.tmx  006-3.tmx  007-1.tmx  008-1.tmx  009-3.tmx  009-4.tmx  009-5.tmx  009-6.tmx  009-7.tmx  009-8.tmx  010-2.tmx  011-1.tmx  011-3.tmx  011-4.tmx  011-6.tmx  012-3.tmx  012-4.tmx  013-1.tmx  013-2.tmx  013-3.tmx  014-1.tmx  014-3.tmx  015-1.tmx  015-3.tmx  016-1.tmx  016-2.tmx  (+69 more)
assets/tilesets/: arena.tsx  arrows.tsx  barbarians_outdoor.tsx  barbarians_yurt_x4.tsx  cave.tsx  cave2.tsx  cave2_bilevel.tsx  cave2_bilevel_water_lava.tsx  cave2_sewer_mine.tsx  cave2_sewer_mine_x2.tsx  cave2_sewer_mine_x3.tsx  cave2_sewer_mine_x4.tsx  cave2_sewers.tsx  cave2_transistions.tsx  cave2_x2.tsx  cave_ani_wetwall.tsx  cave_bilevel.tsx  cave_x2.tsx  collision.tsx  crypt1.tsx  crypt2.tsx  crypt2_x4.tsx  crypt_blockwall.tsx  crypt_fringe2_x3.tsx  crypt_fringe_x3.tsx  crypt_reaper_room.tsx  crypt_x2.tsx  crypt_x4.tsx  crypt_x5.tsx  crypt_x8.tsx  desert1.tsx  desert2.tsx  desert3.tsx  desert_castle.tsx  desert_castle_2.tsx  desert_castle_interior.tsx  desert_castle_interior_x2.tsx  desert_castle_interior_x4.tsx  desert_castle_interior_x5.tsx  desert_castle_x2.tsx  (+69 more)
assets/tilesets/lof/: woodland_indoor_extra.tsx
examples/: simple_map.rs
locales/: en.ftl  zh-CN.ftl
patches/bevy_ecs_tiled/: .cargo_vcs_info.json  Cargo.toml  PATCH_README.md
patches/bevy_ecs_tiled/src/tiled/: reader.rs
patches/bevy_ecs_tiled/src/tiled/map/: loader.rs  spawn.rs
patches/bevy_ecs_tiled/src/tiled/world/: chunking.rs  loader.rs  mod.rs
scripts/: generate_manifest.py
src/: cleanup.rs  details_panel.rs  download.rs  lib.rs  main.rs  manifest.rs  panels.rs  platform.rs  render_settings.rs  translations.rs  web_loading.rs  world_view.rs
