[package]
name = "tiled_map_web_viewer"
version = "0.5.2"
edition = "2024"
authors = ["Bli_AIk"]
license = "GPL-3.0-or-later"
description = "A Tiled map viewer with WASM support for web deployment"
repository = "https://github.com/Bli-AIk/tiled_map_web_viewer"
exclude = ["assets/", "dist/", "dev/", "scripts/", "patches/", ".github/", ".workbench/"]

[dependencies]
bevy = "0.18"
bevy_workbench = "0.3"
bevy_ecs_tiled = "0.11"
bevy_egui = { version = "0.39", features = ["render"] }
egui = "0.33"
egui_tiles = "0.14"
quick-xml = "0.39.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.4.0"

[lib]
name = "tiled_map_web_viewer"
path = "src/lib.rs"

[[bin]]
name = "tiled_map_web_viewer"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3", features = ["Blob", "Document", "Element", "Event", "EventTarget", "HtmlAnchorElement", "HtmlElement", "Node", "Response", "Url", "Window", "XmlHttpRequest", "XmlHttpRequestResponseType"] }

[patch.crates-io]
bevy_ecs_tiled = { path = "patches/bevy_ecs_tiled" }
